nuevas secciones enlces internos

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -17,12 +17,12 @@
 <!--NAVEGACION -->
 
   <div class="container-fluid">
-    <nav class="navbar fixed-top">
+    <nav class="navbar navbar-expand-lg bg-black">
         <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
     </nav>
 
     <!-- FORMULARIO DE CONTACTO -->
-
+    
     <section class="mb-4 mt-5" >
         <div class="row">
           <div class="col-md-9 col-lg-7 col-xl-5 mx-auto text-center">
