--- a/paginas/corporativos.html
+++ b/paginas/corporativos.html
@@ -16,10 +16,24 @@
 
 <!--NAVEGACION -->
 
-  <div class="container-fluid">
-    <nav class="navbar fixed-top">
-        <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
-    </nav>
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg bg-black">
+      <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
+  </nav>
+  <br>
+
+   <!-- SECCION PRINCIPAL -->
+
+  <div class="clearfix">
+    <img src="../media/corpo.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="fest corporativos">
+    <h2>Eventos Corporativos</h2>
+    <br>
+    <p>Las ferias gastronomicas pueden llevarte a recorer un poco del mundo, en estos espacios podemos desarrollar toda 
+      clase de interacciones con el publico mas alla de la gastronomica en si, muchos buscan encontrarse con musica y amigos,
+      espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
+    <p>Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
+      musica y mucho mas..</p>
+  </div>
 
      <!-- FOOTER -->
 
