--- a/paginas/festivales.html
+++ b/paginas/festivales.html
@@ -14,36 +14,48 @@
 
 <body class="p-3 m-0 border-0 bd-example bd-example-cssgrid">
 
-<!--NAVEGACION -->
-  <header class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <nav class="navbar fixed-top navbar-header">
+  <!--NAVEGACION -->
+
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-black">
         <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
-      </nav>
-  </header>
-  <section class="mt-5 mb-5"> 
-    <h1 class="text-center">FESTIVALES FOOD/BEER</h1>
+    </nav>
+    <br>
 
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Lo bueno de los encuentros inesperados <span class="text-muted">Todo es posible.</span></h2>
-        <p class="lead"></p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>FESTIVALES</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">beer/music/food</text></svg>
+     <!-- SECCION PRINCIPAL -->
 
-      </div>
+    <div class="clearfix">
+      <img src="../media/beer.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="fest img">
+      <h2>FESTIVALES</h2>
+      <br>
+      <p>Los festivales generan sensaciones y dejan recuerdon inolvidables, los espacios finamente 
+        desarrollados para que puedan sentirse en el ambiente adecuado, dejando de lados las incomodidades de la vida diario
+        nosotros te llevares a recorrer propuestas de las mas variadas.</p>
+      <p>Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
+        musica y mucho mas..</p>
     </div>
 
-   
-
-  </section>
      <!-- FOOTER -->
 
-  <footer class="container">
-    <p class="float-end "><a href="#">Back to top</a></p>
-    <p>© 2017–2021 Salva papas enterteinment. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-  </footer> 
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+        <span class="mb-3 mb-md-0 text-muted">© 2022 Salva papas, entertainment</span>
+      </div>
+  
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter">
+        </use></svg></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+      </ul>
+    </footer>
+
+
+
+  </div> 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
