--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="sitio oficial de salva papa entertainment">
+    <meta name="theme-color" content="#317EFB"/>
     <title>SALVA PAPAS</title>
     <link rel="icon" type="image/x-icon" href="./logo/salva-papas-website-favicon-black.png">
+    <link rel="apple-touch-icon" href="./logo/salva-papas-website-favicon-black.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -41,16 +43,16 @@
     <h1 class="mt-5 mb-3  text-white" data-aos="zoom-in">PENSAMOS EN GRANDE</h1>
     <div class="container gx-5">
       <div data-aos="fade-up-left" class="col-sm-6">    
-        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/solucion.png">
+        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/solucion.png" alt="imagen soluciones">
         <h2 data-aos="flip-left" class="text-white text-center mt-2 mb-2">SOLUCIÓNES</h2></div>
       <div data-aos="fade-up-left" class="col-sm-8"> 
-        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/creatividad.png">
+        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/creatividad.png" alt="imagen creatividad">
         <h2 data-aos="flip-left" class="text-white mt-2 mb-2">CREATIVIDAD</h2></div>
       <div data-aos="fade-up-left" class="col-sm-9"> 
-        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/experiencia.png">
+        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/experiencia.png" alt="imagen experiencia">
         <h2 data-aos="flip-left" class="text-white mt-2 mb-2">EXPERIENCIA</h2></div>
       <div data-aos="fade-up-left" class="col-sm-12"> 
-        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/eficacia.png">
+        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/eficacia.png" alt="imagen eficacia">
         <h2 data-aos="flip-left" class="text-white mt-2 mb-3">EFICACIA</h2></div>
     </div>
   </main>
@@ -63,19 +65,19 @@
     <div class="container gx-5">
       <div data-aos="fade-up-right" class="col-sm-12">    
         <a href="./paginas/ferias.html">
-          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/stands.jpg"></a>
+          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/stands.jpg" alt="imagen ferias"></a>
         <h2 data-aos="flip-right" class="mt-2 mb-2" >FERIAS GASTRONOMICAS</h2></div>
       <div data-aos="fade-up-right" class="col-sm-9"> 
         <a href="./paginas/festivales.html">
-          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/beer.jpg"></a>
+          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/beer.jpg" alt="imagen food/beer"></a>
         <h2 data-aos="flip-right" class="mt-2 mb-2" >FESTIVALES FOOD/BEER</h2></div>
       <div data-aos="fade-up-right" class="col-sm-8"> 
         <a href="./paginas/masivos.html">
-          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/masivos.jpg"></a>
+          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/masivos.jpg" alt="imagen masivos"></a>
         <h2 data-aos="flip-right" class="mt-2 mb-2">EVENTOS MASIVOS</h2></div>
       <div data-aos="fade-up-right" class="col-sm-6"> 
         <a href="./paginas/corporativos.html">
-          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/corpo.jpg"></a>
+          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/corpo.jpg" alt="imagen corporativos"></a>
         <h2 data-aos="flip-right" class="mt-2 mb-3">GASTRONOMIA CORPORATIVA</h2></div>
     </div>
   </main>
