nuvos contenidos en enlaces internos

--- a/paginas/corporativos.html
+++ b/paginas/corporativos.html
@@ -25,14 +25,15 @@
    <!-- SECCION PRINCIPAL -->
 
   <div class="clearfix">
-    <img src="../media/corpo.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="fest corporativos">
+    <img src="../media/corpo.jpg" class="col-md-4 float-md-end mb-3 ms-md-3" height="450px" alt="fest corporativos">
     <h2>Eventos Corporativos</h2>
     <br>
-    <p>Las ferias gastronomicas pueden llevarte a recorer un poco del mundo, en estos espacios podemos desarrollar toda 
-      clase de interacciones con el publico mas alla de la gastronomica en si, muchos buscan encontrarse con musica y amigos,
-      espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
-    <p>Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
-      musica y mucho mas..</p>
+    <p>Salava papa hace realidad cualquier tipo de evento del mas esquisito nivel y calidad absoluta</p>
+    <p>las nuevas modalidades nos llevan a innovar en todo lo referente a la alta calidad gastronomica, nuevas tecnicas,
+      nuevas formas de generar sentimientos y lograr experiencias fuera de lo comun.
+    </p>
+    <br>
+    <p>Logramos generar nuevos ambientes, expresiones finas, y sentimientos inolvidables para todos los participantes</p>
   </div>
 
      <!-- FOOTER -->
