--- a/paginas/festivales.html
+++ b/paginas/festivales.html
@@ -24,13 +24,14 @@
 
      <!-- SECCION PRINCIPAL -->
 
-    <div class="clearfix">
-      <img src="../media/beer.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="fest img">
+    <div class="container-fluid clearfix">
+      <img src="../media/beer.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" height="400px" alt="fest img">
       <h2>FESTIVALES</h2>
       <br>
       <p>Los festivales generan sensaciones y dejan recuerdon inolvidables, los espacios finamente 
-        desarrollados para que puedan sentirse en el ambiente adecuado, dejando de lados las incomodidades de la vida diario
-        nosotros te llevares a recorrer propuestas de las mas variadas.</p>
+        desarrollados para que puedan sentirse en el ambiente adecuado, dejando de lados las la comodidades del hogar
+        nosotros te llevares a recorrer propuestas variadas, un mundo de opciones donde solo te queda elegir cual sera tu siguiente paso.</p>
+      <br>
       <p>Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
         musica y mucho mas..</p>
     </div>
