--- a/paginas/masivos.html
+++ b/paginas/masivos.html
@@ -16,35 +16,57 @@
 
 <!--NAVEGACION -->
 
-  <div class="container-fluid">
-    <nav class="navbar fixed-top">
-        <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
-    </nav>
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg bg-black">
+      <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
+  </nav>
+  <br>
 
-     <!-- FOOTER -->
-     
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-        </a>
-        <span class="mb-3 mb-md-0 text-muted">© 2022 Salva papas, entertainment</span>
-      </div>
-  
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter">
-        </use></svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-      </ul>
-    </footer>
+   <!-- SECCION PRINCIPAL -->
+
+  <div class="container clearfix">
+    <img src="../media/masivos.jpg" class="col-md- float-md-end mb-3 ms-md-3" height="400px" alt="masivos img">
+    <h2>EVENTOS MASIVOS</h2>
+    <br>
+    <p></p>
+
+    <p>muchos buscan encontrarse con musica y amigos,</p>
+      espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
+      
+    <p>Salva papas puede realizar cualquier tipo de feria, con foco en los mas chicos, con foco en los adolecentes o con 
+      focos multiples generando un ambiente ideal para toda la familia.
+    </p>
+    <p>
+      Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
+      musica y mucho mas..
+    </p>
+  </div>
+
+   <!-- FOOTER -->
+
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+      <span class="mb-3 mb-md-0 text-muted">© 2022 Salva papas, entertainment</span>
+    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter">
+      </use></svg></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+    </ul>
+  </footer>
 
 
-  </div> 
 
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
-   integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-   </script>
+</div> 
+
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+ integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+ </script>
 
 </body>
 
