--- a/paginas/ferias.html
+++ b/paginas/ferias.html
@@ -24,15 +24,23 @@
 
      <!-- SECCION PRINCIPAL -->
 
-    <div class="clearfix">
-      <img src="../media/stands.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="stands img">
+    <div class="container-fluid clearfix">
+      <img src="../media/stands.jpg" class="col-md-4 float-md-end mb-3 ms-md-3" height="600px" alt="stands img">
       <h2>Ferias gastronómicas</h2>
       <br>
       <p>Las ferias gastronomicas pueden llevarte a recorer un poco del mundo, en estos espacios podemos desarrollar toda 
-        clase de interacciones con el publico mas alla de la gastronomica en si, muchos buscan encontrarse con musica y amigos,
+        clase de interacciones con el publico mas alla de la gastronomica en si.</p>
+
+      <p>muchos buscan encontrarse con musica y amigos,</p>
         espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
-      <p>Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
-        musica y mucho mas..</p>
+        
+      <p>Salva papas puede realizar cualquier tipo de feria, con foco en los mas chicos, con foco en los adolecentes o con 
+        focos multiples generando un ambiente ideal para toda la familia.
+      </p>
+      <p>
+        Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
+        musica y mucho mas..
+      </p>
     </div>
 
      <!-- FOOTER -->
