cambios de sitaxis

--- a/paginas/festivales.html
+++ b/paginas/festivales.html
@@ -28,7 +28,7 @@
       <img src="../media/beer.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" height="400px" alt="fest img">
       <h2>FESTIVALES</h2>
       <br>
-      <p>Los festivales generan sensaciones y dejan recuerdon inolvidables, los espacios finamente 
+      <p>Los festivales generan sensaciones y dejan recuerdos inolvidables, los espacios finamente 
         desarrollados para que puedan sentirse en el ambiente adecuado, dejando de lados las la comodidades del hogar
         nosotros te llevares a recorrer propuestas variadas, un mundo de opciones donde solo te queda elegir cual sera tu siguiente paso.</p>
       <br>
