--- a/paginas/ferias.html
+++ b/paginas/ferias.html
@@ -24,8 +24,8 @@
 
      <!-- SECCION PRINCIPAL -->
 
-    <div class="container-fluid clearfix">
-      <img src="../media/stands.jpg" class="col-md-4 float-md-end mb-3 ms-md-3" height="600px" alt="stands img">
+    <div class="container clearfix">
+      <img src="../media/stands.jpg" class="img-fluid" height="600px" alt="stands img">
       <h2>Ferias gastronómicas</h2>
       <br>
       <p>Las ferias gastronomicas pueden llevarte a recorer un poco del mundo, en estos espacios podemos desarrollar toda 
