--- a/paginas/corporativos.html
+++ b/paginas/corporativos.html
@@ -25,7 +25,7 @@
    <!-- SECCION PRINCIPAL -->
 
   <div class="clearfix">
-    <img src="../media/corpo.jpg" class="col-md-4 float-md-end mb-3 ms-md-3" height="450px" alt="fest corporativos">
+    <img src="../media/corpo.jpg" class="img-fluid" height="450px" alt="fest corporativos">
     <h2>Eventos Corporativos</h2>
     <br>
     <p>Salava papa hace realidad cualquier tipo de evento del mas esquisito nivel y calidad absoluta</p>
