--- a/paginas/festivales.html
+++ b/paginas/festivales.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../css/estilos.css">
   </head>
 
-<body class="p-3 m-0 border-0 bd-example bd-example-cssgrid">
+<body class="container-fluid">
 
   <!--NAVEGACION -->
 
@@ -25,7 +25,7 @@
      <!-- SECCION PRINCIPAL -->
 
     <div class="container-fluid clearfix">
-      <img src="../media/beer.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" height="400px" alt="fest img">
+      <img src="../media/beer.jpg" class="img-fluid" height="300px" alt="fest img">
       <h2>FESTIVALES</h2>
       <br>
       <p>Los festivales generan sensaciones y dejan recuerdos inolvidables, los espacios finamente 
