--- a/paginas/masivos.html
+++ b/paginas/masivos.html
@@ -25,7 +25,7 @@
    <!-- SECCION PRINCIPAL -->
 
   <div class="container clearfix">
-    <img src="../media/masivos.jpg" class="col-md- float-md-end mb-3 ms-md-3" height="400px" alt="masivos img">
+    <img src="../media/masivos.jpg" class="img-fluid" height="400px" alt="masivos img">
     <h2>EVENTOS MASIVOS</h2>
     <br>
     <p></p>
