metas agregados a htmls

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="sitio oficial de salva papa entertainment">
+    <meta name="keywords" content="produciones entretenimiento eventos fiestas festivales">
     <meta name="theme-color" content="#317EFB"/>
     <title>SALVA PAPAS</title>
     <link rel="icon" type="image/x-icon" href="./logo/salva-papas-website-favicon-black.png">
