--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <!--NAVEGACION -->
 
-  <nav class="navbar fixed-top">
+  <nav class="navbar fixed-top container-fluid">
     <a class="navbar-brand" href="#"><img src="./logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
-      <a class="navbar-brand text-white "  href="./paginas/contacto.html"><p id="contactus">CONTACTO</p></a>
+      <a class="navbar-brand text-white "  href="./paginas/contacto.html"><h3 id="contactus">CONTACTO</h3></a>
   </nav>
 
     <!-- VIDEO PORTADA -->
@@ -44,16 +44,16 @@
     <h1 class="mt-5 mb-3  text-white" data-aos="zoom-in">PENSAMOS EN GRANDE</h1>
     <div class="container gx-5">
       <div data-aos="fade-up-left" class="col-sm-6">    
-        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/solucion.png" alt="imagen soluciones">
+        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/solucion.png" alt="imagen soluciones">
         <h2 data-aos="flip-left" class="text-white text-center mt-2 mb-2">SOLUCIÓNES</h2></div>
       <div data-aos="fade-up-left" class="col-sm-8"> 
-        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/creatividad.png" alt="imagen creatividad">
+        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/creatividad.png" alt="imagen creatividad">
         <h2 data-aos="flip-left" class="text-white mt-2 mb-2">CREATIVIDAD</h2></div>
       <div data-aos="fade-up-left" class="col-sm-9"> 
-        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/experiencia.png" alt="imagen experiencia">
+        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/experiencia.png" alt="imagen experiencia">
         <h2 data-aos="flip-left" class="text-white mt-2 mb-2">EXPERIENCIA</h2></div>
       <div data-aos="fade-up-left" class="col-sm-12"> 
-        <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/eficacia.png" alt="imagen eficacia">
+        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/eficacia.png" alt="imagen eficacia">
         <h2 data-aos="flip-left" class="text-white mt-2 mb-3">EFICACIA</h2></div>
     </div>
   </main>
@@ -62,36 +62,36 @@
 
   <hr class="mt-5 mb-5">
   <main id="mainn" class="container px-4 text-center">
-    <h1 class="mt-5 mb-3 text-white" data-aos="zoom-in">SERVICIOS</h1>
+    <h2 class="mt-5 mb-3 text-white" data-aos="zoom-in">SERVICIOS</h2>
     <div class="container gx-5">
       <div data-aos="fade-up-right" class="col-sm-12">    
         <a href="./paginas/ferias.html">
-          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/stands.jpg" alt="imagen ferias"></a>
-        <h2 data-aos="flip-right" class="mt-2 mb-2" >FERIAS GASTRONOMICAS</h2></div>
+          <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/stands.jpg" alt="imagen ferias"></a>
+        <h2 data-aos="flip-right" class="mt-2 mb-2 text-white" >FERIAS GASTRONOMICAS</h2></div>
       <div data-aos="fade-up-right" class="col-sm-9"> 
         <a href="./paginas/festivales.html">
-          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/beer.jpg" alt="imagen food/beer"></a>
-        <h2 data-aos="flip-right" class="mt-2 mb-2" >FESTIVALES FOOD/BEER</h2></div>
+          <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/beer.jpg" alt="imagen food/beer"></a>
+        <h2 data-aos="flip-right" class="mt-2 mb-2 text-white" >FESTIVALES FOOD/BEER</h2></div>
       <div data-aos="fade-up-right" class="col-sm-8"> 
         <a href="./paginas/masivos.html">
-          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/masivos.jpg" alt="imagen masivos"></a>
-        <h2 data-aos="flip-right" class="mt-2 mb-2">EVENTOS MASIVOS</h2></div>
+          <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/masivos.jpg" alt="imagen masivos"></a>
+        <h2 data-aos="flip-right" class="mt-2 mb-2 text-white">EVENTOS MASIVOS</h2></div>
       <div data-aos="fade-up-right" class="col-sm-6"> 
         <a href="./paginas/corporativos.html">
-          <img id="dibujos" class="img-fluid p-3 border mt-5" src="./media/corpo.jpg" alt="imagen corporativos"></a>
-        <h2 data-aos="flip-right" class="mt-2 mb-3">GASTRONOMIA CORPORATIVA</h2></div>
+          <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/corpo.jpg" alt="imagen corporativos"></a>
+        <h2 data-aos="flip-right" class="mt-2 mb-3 text-white">GASTRONOMIA CORPORATIVA</h2></div>
     </div>
   </main>
 
     <!-- PROYECTOS -->
   <hr class="mt-5 mb-5">
   <section class="container-fluid mt-3 text-center">
-    <h1 class="font-weight-bold">ALGUNOS DE NUESTROS PROYECTOS</h1>
+    <h2 class="font-weight-bold">ALGUNOS DE NUESTROS PROYECTOS</h2>
     <div class="row">
-      <div  class="col-sm-6 bg-dark text-white p-3">FESTIVAL GASTRONOMICO MAREA PUERTO</div>
-      <div class="col-sm-6 bg-dark text-white p-3">FERIAS GASTRONOMICAS DE BSAS</div>
-      <div class="col-sm-6 bg-dark text-white p-3">FESTIVAL PLAYA Y LEÑA</div>
-      <div class="col-sm-6 bg-dark text-white p-3">NAVIDAD EN EL ALDREY</div>
+      <div  class="col-sm-6 bg-dark text-white p-3"><h3>FESTIVAL GASTRONOMICO MAREA PUERTO</h3></div>
+      <div class="col-sm-6 bg-dark text-white p-3"><h3>FERIAS GASTRONOMICAS DE BSAS</h3></div>
+      <div class="col-sm-6 bg-dark text-white p-3"><h3>FESTIVAL PLAYA Y LEÑA</h3></div>
+      <div class="col-sm-6 bg-dark text-white p-3"><h3>NAVIDAD EN EL ALDREY</h3></div>
     </div>
   </section>
 
