--- a/paginas/corporativos.html
+++ b/paginas/corporativos.html
@@ -26,8 +26,8 @@
 
    <!-- SECCION PRINCIPAL -->
 
-  <div class="clearfix">
-    <img src="../media/corpo.jpg" class="img-fluid" height="450px" alt="fest corporativos">
+  <div class="container-fluid text-center">
+    <img src="../media/corpo.jpg" class="img-fluid dibujos" height="450px" alt="fest corporativos">
     <h2>Eventos Corporativos</h2>
     <br>
     <p>Salava papa hace realidad cualquier tipo de evento del mas esquisito nivel y calidad absoluta</p>
