--- a/paginas/masivos.html
+++ b/paginas/masivos.html
@@ -26,8 +26,8 @@
 
    <!-- SECCION PRINCIPAL -->
 
-  <div class="container clearfix">
-    <img src="../media/masivos.jpg" class="img-fluid" height="400px" alt="masivos img">
+  <div class="container-fluid text-center">
+    <img src="../media/masivos.jpg" class="img-fluid dibujos" height="400px" alt="masivos img">
     <h2>EVENTOS MASIVOS</h2>
     <br>
     <p></p>
