--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../css/estilos.css">
   </head>
 
-<body class="p-3 m-0 border-0 bd-example bd-example-cssgrid">
+<body class="container-fluid">
 
 <!--NAVEGACION -->
 
@@ -25,7 +25,7 @@
 
     <!-- FORMULARIO DE CONTACTO -->
     
-    <section class="mb-4 mt-5" >
+    <section class="container-fluid" >
         <div class="row">
           <div class="col-md-9 col-lg-7 col-xl-5 mx-auto text-center">
             <h4 class="mb-4">CONTACTANOS</h4>
