--- a/paginas/ferias.html
+++ b/paginas/ferias.html
@@ -26,8 +26,8 @@
 
      <!-- SECCION PRINCIPAL -->
 
-    <div class="container clearfix">
-      <img src="../media/stands.jpg" class="img-fluid" height="500px" alt="stands img">
+    <div class="container-fluid text-center">
+      <img src="../media/stands.jpg" class="dibujos" class="img-fluid dibujos" height="500px" alt="stands img">
       <h2>Ferias gastronómicas</h2>
       <br>
       <p>Las ferias gastronomicas pueden llevarte a recorer un poco del mundo, en estos espacios podemos desarrollar toda 
