--- a/paginas/festivales.html
+++ b/paginas/festivales.html
@@ -26,8 +26,8 @@
 
      <!-- SECCION PRINCIPAL -->
 
-    <div class="container-fluid clearfix">
-      <img src="../media/beer.jpg" class="img-fluid" height="300px" alt="fest img">
+    <div class="container-fluid text-center">
+      <img src="../media/beer.jpg" class="img-fluid dibujos" height="300px" alt="fest img">
       <h2>FESTIVALES</h2>
       <br>
       <p>Los festivales generan sensaciones y dejan recuerdos inolvidables, los espacios finamente 
