--- a/paginas/ferias.html
+++ b/paginas/ferias.html
@@ -27,7 +27,7 @@
      <!-- SECCION PRINCIPAL -->
 
     <div class="container-fluid text-center">
-      <img src="../media/stands.jpg" class="dibujos" class="img-fluid dibujos" height="500px" alt="stands img">
+      <img src="../media/stands.jpg" class="dibujos" class="img-fluid dibujos" alt="stands img">
       <h2>Ferias gastronómicas</h2>
       <br>
       <p>Las ferias gastronomicas pueden llevarte a recorer un poco del mundo, en estos espacios podemos desarrollar toda 
