cambios de correccion

--- a/paginas/ferias.html
+++ b/paginas/ferias.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../css/estilos.css">
   </head>
 
-<body class="p-3 m-0 border-0 bd-example bd-example-cssgrid">
+<body>
 
 <!--NAVEGACION -->
 
@@ -34,7 +34,7 @@
         clase de interacciones con el publico mas alla de la gastronomica en si.</p>
 
       <p>muchos buscan encontrarse con musica y amigos,</p>
-        espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
+      <p>espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
         
       <p>Salva papas puede realizar cualquier tipo de feria, con foco en los mas chicos, con foco en los adolecentes o con 
         focos multiples generando un ambiente ideal para toda la familia.
