--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     
   </head>
 
-<body class="container-fluid">
+<body>
 
 <!--NAVEGACION -->
 
   <nav class="navbar fixed-top container-fluid">
     <a class="navbar-brand" href="#"><img src="./logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
-      <a class="navbar-brand text-white "  href="./paginas/contacto.html"><h3 id="contactus">CONTACTO</h3></a>
+      <a class="navbar-brand text-white "  href="./paginas/contacto.html">CONTACTO</a>
   </nav>
 
     <!-- VIDEO PORTADA -->
