--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" type="text/css" href="../css/estilos.css">
   </head>
 
-<body class="container-fluid">
+<body>
 
 <!--NAVEGACION -->
 
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg bg-black">
+    <nav class="navbar navbar-expand bg-black">
         <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
     </nav>
 
@@ -28,31 +28,31 @@
     <section class="container-fluid" >
         <div class="row">
           <div class="col-md-9 col-lg-7 col-xl-5 mx-auto text-center">
-            <h4 class="mb-4">CONTACTANOS</h4>
+            <h1 class="mb-4">CONTACTANOS</h1>
             <form>
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-outline mb-4">
                     <input type="text" id="contactBlockName1" class="form-control" />
-                    <label class="form-label" for="contactBlockName1">NOMBRE</label>
+                    <label class="form-label text-white" for="contactBlockName1">NOMBRE</label>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-outline mb-4">
                     <input type="email" id="contactBlockEmail2" class="form-control" />
-                    <label class="form-label" for="contactBlockEmail2">EMAIL</label>
+                    <label class="form-label text-white" for="contactBlockEmail2">EMAIL</label>
                   </div>
                 </div>
               </div>
               <div class="form-outline mb-4">
                 <input type="tel" id="contactBlockPhone3" class="form-control" />
-                <label class="form-label" for="contactBlockPhone3">TELEFONO (opcional)</label>
+                <label class="form-label text-white" for="contactBlockPhone3 ">TELEFONO (opcional)</label>
               </div>
               <div class="form-outline mb-4">
                 <textarea class="form-control" id="contactBlockMessage4" rows="4"></textarea>
-                <label class="form-label" for="contactBlockMessage4">MENSAJE</label>
+                <label class="form-label text-white" for="contactBlockMessage4">MENSAJE</label>
               </div>
-              <button type="button" class="btn btn-dark btn-block">ENVIAR</button>
+              <button type="button" class="btn btn-dark btn-block text-white">ENVIAR</button>
             </form>
           </div>
         </div>
