--- a/paginas/corporativos.html
+++ b/paginas/corporativos.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../css/estilos.css">
   </head>
 
-<body class="p-3 m-0 border-0 bd-example bd-example-cssgrid">
+<body>
 
 <!--NAVEGACION -->
 
