--- a/paginas/festivales.html
+++ b/paginas/festivales.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../css/estilos.css">
   </head>
 
-<body class="container-fluid">
+<body>
 
   <!--NAVEGACION -->
 
