--- a/paginas/masivos.html
+++ b/paginas/masivos.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../css/estilos.css">
   </head>
 
-<body class="p-3 m-0 border-0 bd-example bd-example-cssgrid">
+<body">
 
 <!--NAVEGACION -->
 
@@ -33,7 +33,7 @@
     <p></p>
 
     <p>muchos buscan encontrarse con musica y amigos,</p>
-      espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
+    <p>espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
       
     <p>Salva papas puede realizar cualquier tipo de feria, con foco en los mas chicos, con foco en los adolecentes o con 
       focos multiples generando un ambiente ideal para toda la familia.
