cambios de correccion

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <!--NAVEGACION -->
 
   <nav class="navbar fixed-top container-fluid">
-    <a class="navbar-brand" href="#"><img src="./logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
-      <a class="navbar-brand text-white "  href="./paginas/contacto.html">CONTACTO</a>
+    <a class="navbar-brand" href="#"><img src="./logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></img></a>
+      <a class="navbar-brand text-white "  href="./paginas/contacto.html"><h2>CONTACTO  </h2></a>
   </nav>
 
     <!-- VIDEO PORTADA -->
@@ -66,19 +66,19 @@
     <div class="container gx-5">
       <div data-aos="fade-up-right" class="col-sm-12">    
         <a href="./paginas/ferias.html">
-          <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/stands.jpg" alt="imagen ferias"></a>
+          <img  class=" p-3 border mt-5 dibujos" src="./media/stands.jpg" alt="foto de un muchacho comprando en foodtruck"></a>
         <h2 data-aos="flip-right" class="mt-2 mb-2 text-white" >FERIAS GASTRONOMICAS</h2></div>
       <div data-aos="fade-up-right" class="col-sm-9"> 
         <a href="./paginas/festivales.html">
-          <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/beer.jpg" alt="imagen food/beer"></a>
+          <img  class=" p-3 border mt-5 dibujos" src="./media/beer.jpg" alt="imagen de unas chicas riendo y tomando una cerveza"></a>
         <h2 data-aos="flip-right" class="mt-2 mb-2 text-white" >FESTIVALES FOOD/BEER</h2></div>
       <div data-aos="fade-up-right" class="col-sm-8"> 
         <a href="./paginas/masivos.html">
-          <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/masivos.jpg" alt="imagen masivos"></a>
+          <img  class=" p-3 border mt-5 dibujos" src="./media/masivos.jpg" alt="imagen de mucha gente mirando un escenario"></a>
         <h2 data-aos="flip-right" class="mt-2 mb-2 text-white">EVENTOS MASIVOS</h2></div>
       <div data-aos="fade-up-right" class="col-sm-6"> 
         <a href="./paginas/corporativos.html">
-          <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/corpo.jpg" alt="imagen corporativos"></a>
+          <img  class=" p-3 border mt-5 dibujos" src="./media/corpo.jpg" alt="foto de un plato de alta gastronomia"></a>
         <h2 data-aos="flip-right" class="mt-2 mb-3 text-white">GASTRONOMIA CORPORATIVA</h2></div>
     </div>
   </main>
