--- a/paginas/corporativos.html
+++ b/paginas/corporativos.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../css/estilos.css">
   </head>
 
-<body>
+<body >
 
 <!--NAVEGACION -->
 
@@ -27,7 +27,7 @@
    <!-- SECCION PRINCIPAL -->
 
   <div class="container-fluid text-center">
-    <img src="../media/corpo.jpg" class="img-fluid dibujos" height="450px" alt="fest corporativos">
+    <img src="../media/corpo.jpg" class="dibujos" alt="imagen de alta gastronomia">
     <h2>Eventos Corporativos</h2>
     <br>
     <p>Salava papa hace realidad cualquier tipo de evento del mas esquisito nivel y calidad absoluta</p>
