--- a/paginas/festivales.html
+++ b/paginas/festivales.html
@@ -27,7 +27,7 @@
      <!-- SECCION PRINCIPAL -->
 
     <div class="container-fluid text-center">
-      <img src="../media/beer.jpg" class="img-fluid dibujos" height="300px" alt="fest img">
+      <img src="../media/beer.jpg" class="dibujos" alt="foto de un evento con dos chicas riendo en un banco y tomando cerveza">
       <h2>FESTIVALES</h2>
       <br>
       <p>Los festivales generan sensaciones y dejan recuerdos inolvidables, los espacios finamente 
