--- a/paginas/masivos.html
+++ b/paginas/masivos.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" type="text/css" href="../css/estilos.css">
   </head>
 
-<body">
+<body>
 
 <!--NAVEGACION -->
 
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg bg-black">
+
+  <nav class="navbar bg-black container-fluid">
       <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
   </nav>
   <br>
@@ -27,7 +27,7 @@
    <!-- SECCION PRINCIPAL -->
 
   <div class="container-fluid text-center">
-    <img src="../media/masivos.jpg" class="img-fluid dibujos" height="400px" alt="masivos img">
+    <img src="../media/masivos.jpg" class="dibujos" alt="una foto de una fiesta en un evento masivo con un escenario de fondo">
     <h2>EVENTOS MASIVOS</h2>
     <br>
     <p></p>
@@ -64,7 +64,7 @@
 
 
 
-</div> 
+ 
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
  integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
