cambios de correccion

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </header>
 
     <!-- MAIN -->
-
+  <hr class="mt-5 mb-5 text-white">
   <main id="mainn" class="container px-4 text-center">
     <h1 class="mt-5 mb-3  text-white" data-aos="zoom-in">PENSAMOS EN GRANDE</h1>
     <div class="container gx-5">
@@ -60,8 +60,8 @@
 
     <!-- SERVICIOS -->
 
-  <hr class="mt-5 mb-5">
-  <main id="mainn" class="container px-4 text-center">
+  <hr class="mt-5 mb-5 text-white">
+  <main id="mainn" class="container px-4 text-center ">
     <h2 class="mt-5 mb-3 text-white" data-aos="zoom-in">SERVICIOS</h2>
     <div class="container gx-5">
       <div data-aos="fade-up-right" class="col-sm-12">    
@@ -84,7 +84,7 @@
   </main>
 
     <!-- PROYECTOS -->
-  <hr class="mt-5 mb-5">
+  <hr class="mt-5 mb-5 text-white">
   <section class="container-fluid mt-3 text-center">
     <h2 class="font-weight-bold">ALGUNOS DE NUESTROS PROYECTOS</h2>
     <div class="row">
