--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <nav class="navbar fixed-top container-fluid">
     <a class="navbar-brand" href="#"><img src="./logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></img></a>
-      <a class="navbar-brand text-white "  href="./paginas/contacto.html"><h2>CONTACTO  </h2></a>
+      <a class="navbar-brand text-white "  href="./paginas/contacto.html"><h2 class="contact">CONTACTO</h2></a>
   </nav>
 
     <!-- VIDEO PORTADA -->
