--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
     <h1 class="mt-5 mb-3  text-white" data-aos="zoom-in">PENSAMOS EN GRANDE</h1>
     <div class="container gx-5">
       <div data-aos="fade-up-left" class="col-sm-6">    
-        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/solucion.png" alt="imagen soluciones">
+        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/solucion.png" alt="dibujo de banditas cruzadas">
         <h2 data-aos="flip-left" class="text-white text-center mt-2 mb-2">SOLUCIÓNES</h2></div>
       <div data-aos="fade-up-left" class="col-sm-8"> 
-        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/creatividad.png" alt="imagen creatividad">
+        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/creatividad.png" alt="imagen de un foco encendido">
         <h2 data-aos="flip-left" class="text-white mt-2 mb-2">CREATIVIDAD</h2></div>
       <div data-aos="fade-up-left" class="col-sm-9"> 
-        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/experiencia.png" alt="imagen experiencia">
+        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/experiencia.png" alt="imagen de un libro abierto">
         <h2 data-aos="flip-left" class="text-white mt-2 mb-2">EXPERIENCIA</h2></div>
       <div data-aos="fade-up-left" class="col-sm-12"> 
-        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/eficacia.png" alt="imagen eficacia">
+        <img class="dibujos" class="img-fluid p-3 border mt-5" src="./media/eficacia.png" alt="imagen de la torre Eiffel">
         <h2 data-aos="flip-left" class="text-white mt-2 mb-3">EFICACIA</h2></div>
     </div>
   </main>
@@ -66,7 +66,7 @@
     <div class="container gx-5">
       <div data-aos="fade-up-right" class="col-sm-12">    
         <a href="./paginas/ferias.html">
-          <img  class=" p-3 border mt-5 dibujos" src="./media/stands.jpg" alt="foto de un muchacho comprando en foodtruck"></a>
+          <img  class=" p-3 border mt-5 dibujos" src="./media/stands.jpg" alt="foto de un muchacho comprando en un foodtruck"></a>
         <h2 data-aos="flip-right" class="mt-2 mb-2 text-white" >FERIAS GASTRONOMICAS</h2></div>
       <div data-aos="fade-up-right" class="col-sm-9"> 
         <a href="./paginas/festivales.html">
