--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <nav class="navbar fixed-top container-fluid">
     <a class="navbar-brand" href="#"><img src="./logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></img></a>
-      <a class="navbar-brand text-white "  href="./paginas/contacto.html"><h2 class="contact">CONTACTO</h2></a>
+      
   </nav>
 
     <!-- VIDEO PORTADA -->
@@ -97,20 +97,15 @@
 
   <!-- FOOTER -->
   
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <footer class="d-flex flex-wrap justify-content-between py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
       </a>
       <span class="mb-3 mb-md-0 text-muted">© 2022 Salva papas, entertainment</span>
+      <a class="navbar-brand text-white "  href="./paginas/contacto.html"><h2 class="contact mb-3 mb-md-1 text-muted">CONTACTO</h2></a>
     </div>
 
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter">
-      </use></svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-    </ul>
   </footer>
   
       
