--- a/paginas/corporativos.html
+++ b/paginas/corporativos.html
@@ -27,10 +27,10 @@
    <!-- SECCION PRINCIPAL -->
 
   <div class="container-fluid text-center">
-    <img src="../media/corpo.jpg" class="dibujos" alt="imagen de alta gastronomia">
+    <img src="../media/corpo.jpg" class="dibujos" alt="imagen de un plato de alta gastronomia">
     <h2>Eventos Corporativos</h2>
     <br>
-    <p>Salava papa hace realidad cualquier tipo de evento del mas esquisito nivel y calidad absoluta</p>
+    <p>Salva papa hace realidad cualquier tipo de evento del mas esquisito nivel y calidad absoluta</p>
     <p>las nuevas modalidades nos llevan a innovar en todo lo referente a la alta calidad gastronomica, nuevas tecnicas,
       nuevas formas de generar sentimientos y lograr experiencias fuera de lo comun.
     </p>
