modificaciones de grids en secciones y nav bar

--- a/paginas/corporativos.html
+++ b/paginas/corporativos.html
@@ -19,23 +19,51 @@
 <!--NAVEGACION -->
 
 <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg bg-black">
-      <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
+  <nav class="navbar navbar-dark bg-black">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></img></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../paginas/contacto.html">Contactanos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../paginas/festivales.html">Festivales</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../paginas/ferias.html">Ferias</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../paginas/masivos.html">Masivos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../paginas/corporativos.html">Corporativos</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
   <br>
 
    <!-- SECCION PRINCIPAL -->
-
-  <div class="container-fluid text-center">
-    <img src="../media/corpo.jpg" class="dibujos" alt="imagen de un plato de alta gastronomia">
-    <h2>Eventos Corporativos</h2>
-    <br>
+   <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="../media/corpo.jpg" class="dibujos" alt="imagen de un plato de alta gastronomia">
+      </div>
+      <div class="col">
+        <h2>Eventos Corporativos</h2>
     <p>Salva papa hace realidad cualquier tipo de evento del mas esquisito nivel y calidad absoluta</p>
     <p>las nuevas modalidades nos llevan a innovar en todo lo referente a la alta calidad gastronomica, nuevas tecnicas,
       nuevas formas de generar sentimientos y lograr experiencias fuera de lo comun.
     </p>
     <br>
     <p>Logramos generar nuevos ambientes, expresiones finas, y sentimientos inolvidables para todos los participantes</p>
+      </div>
+    </div>
   </div>
 
      <!-- FOOTER -->
