--- a/paginas/masivos.html
+++ b/paginas/masivos.html
@@ -19,29 +19,56 @@
 <!--NAVEGACION -->
 
 
-  <nav class="navbar bg-black container-fluid">
-      <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
-  </nav>
-  <br>
+<nav class="navbar navbar-dark bg-black">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></img></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../paginas/contacto.html">Contactanos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../paginas/festivales.html">Festivales</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../paginas/ferias.html">Ferias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../paginas/masivos.html">Masivos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../paginas/corporativos.html">Corporativos</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
    <!-- SECCION PRINCIPAL -->
-
-  <div class="container-fluid text-center">
-    <img src="../media/masivos.jpg" class="dibujos" alt="una foto de una fiesta en un evento masivo con un escenario de fondo">
-    <h2>EVENTOS MASIVOS</h2>
-    <br>
-    <p></p>
-
-    <p>muchos buscan encontrarse con musica y amigos,</p>
-    <p>espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
+   
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="../media/masivos.jpg" class="dibujos" alt="una foto de una fiesta en un evento masivo con un escenario de fondo">
+      </div>
+      <div class="col">
+       <h2>EVENTOS MASIVOS</h2>
+       <br>
+       <p>muchos buscan encontrarse con musica y amigos,</p>
+       <p>espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
       
-    <p>Salva papas puede realizar cualquier tipo de feria, con foco en los mas chicos, con foco en los adolecentes o con 
-      focos multiples generando un ambiente ideal para toda la familia.
-    </p>
-    <p>
-      Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
-      musica y mucho mas..
-    </p>
+       <p>Salva papas puede realizar cualquier tipo de feria, con foco en los mas chicos, con foco en los adolecentes o con 
+        focos multiples generando un ambiente ideal para toda la familia.
+       </p>
+       <p>
+       Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
+       musica y mucho mas..
+       </p> 
+      </div>
+    </div>
   </div>
 
    <!-- FOOTER -->
