--- a/index.html
+++ b/index.html
@@ -23,9 +23,32 @@
 
 <!--NAVEGACION -->
 
-  <nav class="navbar fixed-top container-fluid">
-    <a class="navbar-brand" href="#"><img src="./logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></img></a>
-      
+  <nav class="navbar fixed-top navbar-dark bg-black">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="./logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></img></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./paginas/contacto.html">Contactanos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./paginas/festivales.html">Festivales</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./paginas/ferias.html">Ferias</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./paginas/masivos.html">Masivos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./paginas/corporativos.html">Corporativos</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
 
     <!-- VIDEO PORTADA -->
@@ -103,7 +126,6 @@
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
       </a>
       <span class="mb-3 mb-md-0 text-muted">© 2022 Salva papas, entertainment</span>
-      <a class="navbar-brand text-white "  href="./paginas/contacto.html"><h2 class="contact mb-3 mb-md-1 text-muted">CONTACTO</h2></a>
     </div>
 
   </footer>
