--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -19,8 +19,32 @@
 <!--NAVEGACION -->
 
   <div class="container-fluid">
-    <nav class="navbar navbar-expand bg-black">
-        <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
+    <nav class="navbar navbar-dark bg-black">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></img></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../paginas/contacto.html">Contactanos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/festivales.html">Festivales</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/ferias.html">Ferias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/masivos.html">Masivos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/corporativos.html">Corporativos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
     <!-- FORMULARIO DE CONTACTO -->
