--- a/paginas/ferias.html
+++ b/paginas/ferias.html
@@ -19,30 +19,59 @@
 <!--NAVEGACION -->
 
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg bg-black">
-        <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
+    <nav class="navbar navbar-dark bg-black">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></img></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../paginas/contacto.html">Contactanos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/festivales.html">Festivales</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/ferias.html">Ferias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/masivos.html">Masivos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/corporativos.html">Corporativos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
     <br>
 
      <!-- SECCION PRINCIPAL -->
-
-    <div class="container-fluid text-center">
-      <img src="../media/stands.jpg" class="dibujos" alt="foto de un muchacho feliz comprando en un foodtruck">
-      <h2>Ferias gastronómicas</h2>
-      <br>
-      <p>Las ferias gastronomicas pueden llevarte a recorer un poco del mundo, en estos espacios podemos desarrollar toda 
+     <div class="container">
+      <div class="row">
+        <div class="col">
+          <img src="../media/stands.jpg" class="dibujos" alt="foto de un muchacho feliz comprando en un foodtruck">
+        </div>
+        <div class="col">
+         <h2>Ferias gastronómicas</h2>
+         <br>
+         <p>Las ferias gastronomicas pueden llevarte a recorer un poco del mundo, en estos espacios podemos desarrollar toda 
         clase de interacciones con el publico mas alla de la gastronomica en si.</p>
 
-      <p>muchos buscan encontrarse con musica y amigos,</p>
-      <p>espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
+         <p>muchos buscan encontrarse con musica y amigos,</p>
+         <p>espacios donde no solo se deleitaran con las mejores opciones de bebidas y comidas.</p>
         
-      <p>Salva papas puede realizar cualquier tipo de feria, con foco en los mas chicos, con foco en los adolecentes o con 
+         <p>Salva papas puede realizar cualquier tipo de feria, con foco en los mas chicos, con foco en los adolecentes o con 
         focos multiples generando un ambiente ideal para toda la familia.
-      </p>
-      <p>
+         </p>
+         <p>
         Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
         musica y mucho mas..
-      </p>
+         </p> 
+        </div>
+      </div>
     </div>
 
      <!-- FOOTER -->
