--- a/paginas/festivales.html
+++ b/paginas/festivales.html
@@ -19,23 +19,52 @@
   <!--NAVEGACION -->
 
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg bg-black">
-        <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></a>
+    <nav class="navbar navbar-dark bg-black">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img src="../logo/salva-papas-high-resolution-logo-white-on-transparent-background.png" class="img-fluid" width="120px" height="120px" alt="logo de marca"></img></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../paginas/contacto.html">Contactanos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/festivales.html">Festivales</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/ferias.html">Ferias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/masivos.html">Masivos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/corporativos.html">Corporativos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
     <br>
 
      <!-- SECCION PRINCIPAL -->
-
-    <div class="container-fluid text-center">
-      <img src="../media/beer.jpg" class="dibujos" alt="foto de un evento con dos chicas riendo en un banco y tomando cerveza">
-      <h2>FESTIVALES</h2>
-      <br>
-      <p>Los festivales generan sensaciones y dejan recuerdos inolvidables, los espacios finamente 
-        desarrollados para que puedan sentirse en el ambiente adecuado, dejando de lados las la comodidades del hogar
-        nosotros te llevares a recorrer propuestas variadas, un mundo de opciones donde solo te queda elegir cual sera tu siguiente paso.</p>
-      <br>
-      <p>Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
-        musica y mucho mas..</p>
+     <div class="container">
+      <div class="row">
+        <div class="col">
+         <img src="../media/beer.jpg" class="dibujos" alt="foto de un evento con dos chicas riendo en un banco y tomando cerveza"> 
+        </div>
+        <div class="col">
+          <h2>FESTIVALES</h2>
+          <br>
+          <p>Los festivales generan sensaciones y dejan recuerdos inolvidables, los espacios finamente 
+          desarrollados para que puedan sentirse en el ambiente adecuado, dejando de lados las la comodidades del hogar
+          nosotros te llevares a recorrer propuestas variadas, un mundo de opciones donde solo te queda elegir cual sera tu siguiente paso.</p>
+          <br>
+          <p>Encontra en Salva papas la opcion que mas se adecua a tu evento, jugos para todas las edades, 
+          musica y mucho mas..</p>
+        </div>
+      </div>
     </div>
 
      <!-- FOOTER -->
