modificaciones de grids en secciones y nav bar

--- a/paginas/masivos.html
+++ b/paginas/masivos.html
@@ -49,12 +49,12 @@
 
    <!-- SECCION PRINCIPAL -->
    
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col">
-        <img src="../media/masivos.jpg" class="dibujos" alt="una foto de una fiesta en un evento masivo con un escenario de fondo">
+      <div class="col-sm-6">
+        <img src="../media/masivos.jpg" class="dibujos text-center" alt="una foto de una fiesta en un evento masivo con un escenario de fondo">
       </div>
-      <div class="col">
+      <div class="col-sm-4">
        <h2>EVENTOS MASIVOS</h2>
        <br>
        <p>muchos buscan encontrarse con musica y amigos,</p>
