--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
     <!-- PROYECTOS -->
   <hr class="mt-5 mb-5 text-white">
   <section class="container-fluid mt-3 text-center">
-    <h2 class="font-weight-bold">ALGUNOS DE NUESTROS PROYECTOS</h2>
+    <button class="font-weight-bold" id="boton">COTIZA TU EVENTO</button>
+    <br></br>
     <div class="row">
       <div  class="col-sm-6 bg-dark text-white p-3"><h3>FESTIVAL GASTRONOMICO MAREA PUERTO</h3></div>
       <div class="col-sm-6 bg-dark text-white p-3"><h3>FERIAS GASTRONOMICAS DE BSAS</h3></div>
