--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </div>
     <br></br>
     <div class="col">
-      <div id="contenedorCotizaciones">
+      <div id="contenedor-cotizaciones">
       </div>
     
   </section>
