--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         </div>
         <br></br>
         <button type="submit" class="font-weight-bold btn-primary " id="boton">COTIZAR</button>
+        <button type="submit" class="font-weight-bold btn-primary " id="boton-comparar">COMPARAR</button>
         <br></br>
       </form>
     </div>
