--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div id="contenedor-cotizaciones"></div>
     
     </div>  
-    <div class="cryptoLive"></div>  
+    <div class="clima"></div>  
  
     
   </section>
