--- a/index.html
+++ b/index.html
@@ -140,7 +140,33 @@
       <div id="contenedor-cotizaciones"></div>
     
     </div>  
-    <div class="clima"></div>  
+    <div class="col">
+      <section class="weather-content">
+        <h1>consulta el clima para tu evento</h1>
+        <div class="result">
+            <p>Agrege cuidad y pais</p>
+            <!-- <h5>Clima en Bogota</h5>
+            <img src="" alt="">
+            <h2>28°C</h2>
+            <p>Max: 29°C</p>
+            <p>Min: 27°C</p> -->
+        </div>
+        <form action="" method="POST" class="get-weather">
+          <input type="text" name="city" id="city" placeholder="Write your city...">
+          <select name="" id="country">
+              <option disabled selected value="">Select the country</option>
+              <option value="AR">Argentina</option>
+              <option value="CO">Colombia</option>
+              <option value="CR">Costa Rica</option>
+              <option value="ES">España</option>
+              <option value="US">Estados Unidos</option>
+              <option value="MX">México</option>
+              <option value="PE">Perú</option>
+          </select>
+          <input type="submit" name="" id="" value="Get Weather">
+      </form>
+    </section>
+    </div>  
  
     
   </section>
@@ -165,6 +191,7 @@
     AOS.init();
   </script>
   <script src="./main.js"></script>
+  <script src="./clima.js"></script>
 </body>
 
 </html>
